# led-matrix

./: .gitmodules  CMakeLists.txt  hub75.c
hw/: case.FCStd
sw/: CMakeLists.txt  hub75.c  main.c
sw/mongoose/: FreeRTOSConfig.h  main.c  net.c
